RESOLVED FIXED144284
Extending undefined in class syntax should throw a TypeError
https://bugs.webkit.org/show_bug.cgi?id=144284
Summary Extending undefined in class syntax should throw a TypeError
Erik Arvidsson
Reported 2015-04-27 15:38:29 PDT
http://trac.webkit.org/browser/trunk/LayoutTests/js/script-tests/class-syntax-extends.js#L73 shouldThrow('new (class extends undefined { constructor () { this } })', '"ReferenceError: Cannot access uninitialized variable."'); the `extends undefined` should throw a TypeError.
Attachments
Fixes the bug (7.18 KB, patch)
2015-05-03 17:04 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2015-05-03 17:04:49 PDT
Created attachment 252294 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2015-05-04 12:24:15 PDT
Thanks for the reviews, Darin!
Ryosuke Niwa
Comment 3 2015-05-04 12:24:40 PDT
Comment on attachment 252294 [details] Fixes the bug Clearing flags on attachment: 252294 Committed r183759: <http://trac.webkit.org/changeset/183759>
Ryosuke Niwa
Comment 4 2015-05-04 12:24:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.